/*
Copyright 2023 The Invisinets Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package invisinetspb;

option go_package="github.com/NetSys/invisinets/pkg/invisinetspb";

service CloudPlugin {
    rpc GetPermitList(Resource) returns (PermitList) {}
    rpc AddPermitListRules(PermitListRuleSet) returns (BasicResponse) {}
    rpc DeletePermitListRules(PermitListRuleSet) returns (BasicResponse) {}
}


message Resource {
    string id = 1;
}

message BasicResponse {
    bool success = 1;
    string message = 2;
    optional Resource updated_resource = 3;
}

enum Direction {
    INBOUND = 0;
    OUTBOUND = 1;
}

message PermitListRule {
    string id = 1;
    repeated string tag = 2;
    Direction direction = 3;
    int32 src_port = 4;
    int32 dst_port = 5;
    int32 protocol = 6;
}

message PermitListRuleSet {
    string permit_list_id = 1;
    repeated PermitListRule rules = 2;
}

message PermitList {
    string name = 1;
    string location = 2;
    string id = 3;

    message PermitListProperties {
        string associated_resource = 1; 
        repeated PermitListRule rules = 2;
    }

    PermitListProperties properties = 4; 
}
